cmake_minimum_required(VERSION 3.17)
project(pratical_filter)

set(CMAKE_CXX_STANDARD 14)
find_package(Eigen3 REQUIRED)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${EIGEN3_INCLUDE_DIRS})
add_library(simple_pf_lib SHARED simple_pf.cpp)
link_libraries(simple_pf_lib ${OpenCV_LIBS})
add_executable(particle_filter main.cpp)
target_link_libraries(particle_filter simple_pf_lib)